# --------------------------------------------------------------------------------------------------
# SPDX-License-Identifier: Apache-2.0
# Copyright (C) 2024 Jayesh Badwaik <j.badwaik@fz-juelich.de>
# --------------------------------------------------------------------------------------------------

[project]
name = "pybhalu"
dynamic = ["version"]
description = 'A Python Implementation of the Paket Packaging Specification'
readme = "readme.md"
license = "Apache-2.0"
authors = [
{ name = "Jayesh Badwaik", email = "j.badwaik@fz-juelich.de" },
]
dependencies = [
]

[project.urls]
Documentation = "https://gitlab.com/ambhora/software/pybhalu"
Issues = "https://gitlab.com/ambhora/software/pybhalu/issues"
Source = "https://gitlab.com/ambhora/software/pybhalu"

[project.scripts]
pybhalu = "pybhalu.cli:main"

# --------------------------------------------------------------------------------------------------
# Hatch configuration
# --------------------------------------------------------------------------------------------------
[tool.hatch.version]
path = "src/pybhalu/metadata.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pybhalu"]

[tool.hatch.build.targets.wheel.shared-data]
"share"="share"

# --------------------------------------------------------------------------------------------------
# PyTest configuration
# --------------------------------------------------------------------------------------------------
[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--cov --cov-report term-missing --cov-fail-under=98"

[tool.hatch.envs.test]
dependencies = [
  "pytest",
  "pytest-cov"
]

[tool.hatch.envs.types]
dependencies = [
  "types-PyYAML",
  "mypy"
]

[tool.hatch.envs.doc]
dependencies = [
  "mkdocs",
  "mkdocstrings[python]",
  "mkdocs-material",
  "mike"
]

[tool.black]
line-length = 100

